# keepintouch-bot

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: main.yml
app/: .coveragerc  manage.py  requirements.txt  settings.py
app/keepintouch/: asgi.py  settings.py  urls.py  wsgi.py
app/tests/: conftest.py  test_contacts.py  test_dispatcher.py  test_error.py  test_lambda.py  test_notification.py  test_notify_keepintouch.py  test_send_notification.py  test_special.py  test_start.py
app/tests/test_callbacks/: test_delete_contact.py  test_edit_contact.py  test_keepintouch.py  test_set_group.py
app/tests/test_commands/: test_add_contact.py  test_list.py  test_list_old.py  test_start.py
app/tests/test_messages/: test_shared_contact.py
app/tests/test_models/: test_contact.py  test_user.py
app/tgbot/: core.py  dispatcher.py  models.py  views.py
app/tgbot/handlers/: __init__.py  contacts.py  error.py  notification.py  special.py  start.py  utils.py
app/tgbot/management/commands/: notify_keepintouch.py  run_pooling.py  set_up_commands.py
app/tgbot/migrations/: 0001_initial.py  0002_alter_contact_group.py  0003_message.py
app/tgbot/utils/: abstract.py  info.py
app/utils/: info.py  models.py
keepintouch/: settings.py  urls.py
tgbot/: core.py  dispatcher.py  models.py  views.py
tgbot/handlers/: contacts.py  notification.py  start.py  utils.py
tgbot/management/commands/: notify_keepintouch.py
tgbot/migrations/: 0001_initial.py
utils/: info.py
